Fix up bumpversion

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -6,13 +6,5 @@ tag_name = v{new_version}
 message = Bump version: {current_version} → {new_version}
 
 [bumpversion:file:internal/version/version.go]
-search = var Version = "{current_version}"
-replace = var Version = "{new_version}"
-
-[bumpversion:file:README.md]
-search = makemigrations v{current_version}
-replace = makemigrations v{new_version}
-
-[bumpversion:file:README.md]
-search = Version {current_version}
-replace = Version {new_version}
+search = Version = "{current_version}"
+replace = Version = "{new_version}"
