--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       run: go mod download
 
     - name: Run tests
-      run: go test -v ./...
+      run: go test -v $(go list ./... | grep -v '/debug')
 
     - name: Run linter
       uses: golangci/golangci-lint-action@v3
