--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -37,8 +37,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: '1.21'
+
     - name: Run Gosec Security Scanner
-      uses: securecodewarrior/github-action-gosec@master
+      uses: securego/gosec@master
       with:
         args: '-no-fail -fmt sarif -out results.sarif ./...'
 
